# final-assessment-genai-bootcamp

./: .dockerignore  .env.example  .gitignore  Dockerfile  ReadMe.md  app.py  main.py  pyproject.toml  requirements.txt  run_server.py
docs/: AUTH-IMPLEMENTATION-SUMMARY.md  Assessment.md  Plan.md
k8s/: create-secret.sh  deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
routes/: __init__.py  chat.py  health.py  sessions.py  tools.py
src/: config.py  models.py
src/core/: chat_util.py  llm_client.py  mcp_client.py
src/routes/: chat.py  health.py  sessions.py  tools.py
src/static/: index.html
tests/: test_chat_util.py  test_llm_client.py  test_mcp_client.py  test_mcp_connection.py
